--- a/style.css
+++ b/style.css
@@ -428,6 +428,7 @@ body {
   color: #333;
   font-family: "Source Sans Pro", sans-serif, sans-serif;
   font-size: 20;
+  font-size: 20;
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   line-height: 1.625;
@@ -438,15 +439,18 @@ body {
 @media screen and (max-width: 860px) {
   body {
     font-size: 18;
+    font-size: 18;
   }
 }
 
 body > div {
   font-size: 20;
+  font-size: 20;
 }
 
 @media screen and (max-width: 860px) {
   body > div {
+    font-size: 18;
     font-size: 18;
   }
 }
@@ -518,6 +522,7 @@ blockquote::before {
   content: "\201C";
   display: block;
   font-size: 30;
+  font-size: 30;
   height: 0;
   left: -20px;
   position: relative;
@@ -540,25 +545,31 @@ h6 {
 
 h1 {
   font-size: 36;
+  font-size: 36;
 }
 
 h2 {
+  font-size: 30;
   font-size: 30;
 }
 
 h3 {
   font-size: 24;
+  font-size: 24;
 }
 
 h4 {
+  font-size: 20;
   font-size: 20;
 }
 
 h5 {
   font-size: 18;
+  font-size: 18;
 }
 
 h6 {
+  font-size: 16;
   font-size: 16;
 }
 
@@ -625,6 +636,7 @@ input[type="submit"],
   border: 0;
   color: #fff;
   cursor: pointer;
+  font-size: 16;
   font-size: 16;
   font-weight: 700;
   padding: 16px 24px;
@@ -1245,6 +1257,7 @@ img.alignright {
  *-------------------------------*/
 .site-title {
   font-size: 30;
+  font-size: 30;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -1260,6 +1273,7 @@ img.alignright {
  * Site Description
  *-------------------------------*/
 .site-description {
+  font-size: 16;
   font-size: 16;
   font-weight: 400;
   line-height: 1.5;
@@ -1322,6 +1336,7 @@ img.alignright {
 .genesis-nav-menu {
   clear: both;
   font-size: 16;
+  font-size: 16;
   font-weight: 600;
   line-height: 1;
   width: 100%;
@@ -1374,6 +1389,7 @@ img.alignright {
   background-color: #fff;
   border: 1px solid #eee;
   border-top: 0;
+  font-size: 14;
   font-size: 14;
   padding: 20px;
   position: relative;
@@ -1544,6 +1560,7 @@ img.alignright {
   cursor: pointer;
   display: inline-block;
   font-size: 16;
+  font-size: 16;
   font-weight: 600;
   padding: 8px 12px;
   text-decoration: none;
@@ -1650,6 +1667,7 @@ img.alignright {
  *-------------------------------*/
 .entry-title {
   font-size: 36;
+  font-size: 36;
 }
 
 .entry-title a {
@@ -1663,6 +1681,7 @@ img.alignright {
 
 .entry-header .entry-meta {
   margin-bottom: 24px;
+  font-size: 16;
   font-size: 16;
 }
 
@@ -1719,6 +1738,7 @@ img.alignright {
 .after-entry {
   background-color: #fff;
   font-size: 18;
+  font-size: 18;
   margin-bottom: 40px;
   padding: 60px;
 }
@@ -1766,6 +1786,7 @@ img.alignright {
 .entry-comments,
 .entry-pings {
   background-color: #fff;
+  font-size: 16;
   font-size: 16;
   margin-bottom: 40px;
 }
@@ -1850,6 +1871,7 @@ img.alignright {
   ---------------------------------------------------------------------------------------------------- */
 .sidebar {
   font-size: 16;
+  font-size: 16;
   margin-bottom: 40px;
 }
 
@@ -1912,6 +1934,7 @@ img.alignright {
 
 .widget-title {
   font-size: 18;
+  font-size: 18;
   margin-bottom: 20px;
 }
 
@@ -1939,6 +1962,7 @@ img.alignright {
 }
 
 .featured-content .entry-title {
+  font-size: 20;
   font-size: 20;
 }
 
@@ -1986,6 +2010,7 @@ img.alignright {
   ---------------------------------------------------------------------------------------------------- */
 .footer-widgets {
   background-color: #fff;
+  font-size: 18;
   font-size: 18;
   clear: both;
   padding: 60px 0;
@@ -2044,6 +2069,7 @@ img.alignright {
 .site-footer {
   background-color: #fff;
   border-top: 1px solid #eee;
+  font-size: 16;
   font-size: 16;
   font-size: 1.6rem;
   line-height: 1;
@@ -2107,6 +2133,7 @@ img.alignright {
 .archive-description {
   background-color: #ccc;
   font-size: 18;
+  font-size: 18;
   margin-bottom: 40px;
   padding: 60px;
 }
@@ -2124,5 +2151,6 @@ img.alignright {
 
 .archive-description .entry-title,
 .archive-title {
+  font-size: 20;
   font-size: 20;
 }
